# AfterEffectsSDK

./: .gitignore  CMakeLists.txt  Info.plist
Examples/AEGP/Panelator/: .gitignore  CMakeLists.txt  Info.plist  Panelator.cpp  Panelator.h  Panelator.mm  PanelatorUI.cpp  PanelatorUI.h  Panelator_PiPL.r  testing.jsx
Examples/AEGP/Panelator/Win/: AEPathLink.r  Config.h  LicensingUtils.cpp  LicensingUtils.h  Panelator.mm  Panelator.vcxproj  Panelator.vcxproj.filters  PanelatorUI_Mac.cpp  PanelatorUI_Mac.h  PanelatorUI_Mac.mm  PanelatorUI_Plat.h  Panelator_PiPL.aps  Panelator_PiPL.rc  Parser.h  Parser.mm  icons.aps  icons.rc
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/: .gitignore  README.md
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/ObjCDemo/: main.mm
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/ObjCDemo/ObjCDemo.xcodeproj/: project.pbxproj
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/doc/: changelog.txt
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/include/: TMsgDlg.h  TMsgDlg.jsx  TMsgDlg.jsx.h  aescriptsLicensing.h  aescriptsLicensing_AdobeHelpers.h  generate_script_include.cmd
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/lib/Windows/VS2012/: aescriptsLicensing_MD_Debug.lib  aescriptsLicensing_MD_Release.lib  aescriptsLicensing_MT_Release.lib
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/lib/Windows/VS2013/: aescriptsLicensing_MD_Debug.lib  aescriptsLicensing_MD_Release.lib  aescriptsLicensing_MT_Release.lib
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/lib/Windows/VS2015/: aescriptsLicensing_MD_Release.lib  aescriptsLicensing_MT_Release.lib
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/lib/Windows/VS2017/: aescriptsLicensing_MD_Release.lib  aescriptsLicensing_MT_Release.lib
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/lib/Windows/VS2019/: aescriptsLicensing_MD_Debug.lib  aescriptsLicensing_MD_Release.lib  aescriptsLicensing_MT_Debug.lib  aescriptsLicensing_MT_Release.lib
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/lib/Windows/VS2022/: aescriptsLicensing_MD_Debug.lib  aescriptsLicensing_MD_Release.lib  aescriptsLicensing_MT_Debug.lib  aescriptsLicensing_MT_Release.lib
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/licTestPlugin/: EffectPiPL.r  licTestPlugin.cpp  licTestPlugin.h
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/licTestPlugin/MacOS/: licTestPlugin.plugin-Info.plist
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/licTestPlugin/MacOS/licTestPlugin.xcodeproj/: project.pbxproj
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/licTestPlugin/Windows/: EffectPiPL.rc  licTestPlugin.sln  licTestPlugin.vcxproj  licTestPlugin.vcxproj.filters
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/licTestPlugin_AEGP/: EffectPiPL.r  licTestPlugin_AEGP.cpp  licTestPlugin_AEGP.h
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/licTestPlugin_AEGP/MacOS/: licTestPlugin_AEGP.plugin-Info.plist
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/licTestPlugin_AEGP/MacOS/licTestPlugin_AEGP.xcodeproj/: project.pbxproj
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/licTestPlugin_AEGP/Windows/: licTestPlugin_AEGP.vcxproj  licTestPlugin_AEGP.vcxproj.filters
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/licTestPlugin_AEGP/Windows_2017/: EffectPiPL.rc  licTestPlugin_AEGP.vcxproj
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/licTestPlugin_AEGP/Windows_2022/: licTestPlugin_AEGP.sln  licTestPlugin_AEGP.vcxproj
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/tools/: aescriptsLicenseChecker.cpp  aescriptsLicenser.cpp  aescriptsNetworkChecker.cpp  aescriptsValidator.cpp
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/tools/MacOS/: buildall.sh
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/tools/MacOS/aescriptsLicenseChecker.xcodeproj/: project.pbxproj
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/tools/MacOS/aescriptsLicenser.xcodeproj/: project.pbxproj
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/tools/MacOS/aescriptsNetworkChecker.xcodeproj/: project.pbxproj
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/tools/MacOS/aescriptsValidator.xcodeproj/: project.pbxproj
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/tools/Windows/: aescriptsLicenseChecker.vcxproj  aescriptsLicenseChecker.vcxproj.filters  aescriptsLicenser.vcxproj  aescriptsLicenser.vcxproj.filters  aescriptsNetworkChecker.vcxproj  aescriptsTools.sln  aescriptsValidator.vcxproj  aescriptsValidator.vcxproj.filters  buildall.bat  targetver.h
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/tools/Windows/tmp/aescriptsLicenseChecker_Release/: aescriptsLicenseChecker.exe.recipe  aescriptsLicenseChecker.iobj  aescriptsLicenseChecker.ipdb
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/tools/Windows/tmp/aescriptsLicenseChecker_Release/aescript.5A1EAFFD.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/tools/Windows/tmp/aescriptsLicenser_Release/: aescriptsLicenser.exe.recipe  aescriptsLicenser.iobj  aescriptsLicenser.ipdb
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/tools/Windows/tmp/aescriptsLicenser_Release/aescript.F3C96654.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+6 more)
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/tools/Windows/tmp/aescriptsNetworkChecker_Release/: aescriptsNetworkChecker.exe.recipe  aescriptsNetworkChecker.iobj  aescriptsNetworkChecker.ipdb
Examples/AEGP/Panelator/aescripts-PLUGINS-licensing-framework/tools/Windows/tmp/aescriptsValidator_Release/: aescriptsValidator.exe.recipe  aescriptsValidator.iobj  aescriptsValidator.ipdb
(+78 files in other folders)
